hphp/hack/test/typecheck/duplicate_meth_attributes.php
<?hh

class F {
  <<__Deprecated('a'), __Deprecated('b')>>
  public function f() {}
}
